--- a/index.css
+++ b/index.css
@@ -4,5 +4,6 @@ h1 {
     margin-left: 5rem;
     margin-top: 5rem;
     cursor: pointer;
-},
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
