--- a/index.css
+++ b/index.css
@@ -7,3 +7,11 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.form,
+.greetings {
+    display: none;
+}
+
+.showing {
+    display: block;
+}
