--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@ h1 {
 .form,
 .greetings {
     display: none;
+    margin-left: 7rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .showing {
