--- a/index.css
+++ b/index.css
@@ -7,11 +7,15 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+h3 {
+    color: #ecf0f1;
+}
+
 .btn {
     cursor: pointer;
 }
 body {
-    color: #34495e;
+    color: #2c3e50;
 }
 
 
@@ -26,4 +30,23 @@ body {
 
 .showing {
     display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
 }
